Update CSS style image

--- a/fundamentals/section-02-html-and-css/day-02-first-steps-css/exercise-02/index.html
+++ b/fundamentals/section-02-html-and-css/day-02-first-steps-css/exercise-02/index.html
@@ -114,9 +114,8 @@ The goal is not to create a perfect website, but to practice and reinforce the f
 </p>
 
 <p id="image">
-
+<img src="Captura de tela 2026-02-04 163144.png" alt="Illustrative image related to CSS styling and web design" width="300px">
     
-    <img src="https://www.researchgate.net/publication/324275036/figure/fig4/AS%3A1120350242902018%401644123721531/Web-page-with-CSS-and-without-CSS.png" alt="Illustrative image related to CSS styling and web design" width="300px">
 </p>
  
 
